2001-11-24  Werner Koch  <wk@gnupg.org>

	* md.c (gcry_md_map_name): Look also for OIDs prefixed with "oid."
	or "OID." so that an OID string can be used as an S-Exp token.

2001-11-20  Werner Koch  <wk@gnupg.org>

	* md.c (gcry_md_map_name): Lookup by OID if the the name begins
	with a digit.
	(oid_table): New.
	
2001-11-16  Werner Koch  <wk@gnupg.org>

	* md.c (gcry_md_info): New operator GCRYCTL_IS_ALGO_ENABLED.

2001-11-07  Werner Koch  <wk@gnupg.org>

	* md.c (gcry_md_hash_buffer): Close the handle which was left open
	for algorithms other than rmd160.

2001-08-08  Werner Koch  <wk@gnupg.org>

	* rndw32.c (gather_random): Use toolhelp in addition to the NT
	gatherer for Windows2000.  Suggested by Sami Tolvanen.

	* random.c (read_pool): Fixed length check, this used to be one
	byte to strict.  Made an assert out of it because the caller has
	already made sure that only poolsize bytes are requested.
	Reported by Marcus Brinkmann.

2001-08-03  Werner Koch  <wk@gnupg.org>

	* cipher.c (cipher_encrypt, cipher_decrypt): Prepare to return
	errors. We have to change the interface to all ciphers to make
	this really work but we should do so to prepare for hardware
	encryption modules.
	(gcry_cipher_encrypt, gcry_cipher_decrypt): Return the error and
	set lasterr. 
	(gcry_cipher_ctl): Make sure that errors from setkey are returned.

2001-08-02  Werner Koch  <wk@gnupg.org>

	* rndlinux.c (gather_random): casted a size_t arg to int so that
	the format string is correct.  Casting is okay here and avoids
	translation changes. 

	* random.c (fast_random_poll): Do not check the return code of
	getrusage.

	* rndunix.c: Add a signal.h header to avoid warnings on Solaris 7
	and 8.

	* tiger.c (print_abc,print_data): Removed.

	* rijndael.c, des.c, blowfish.c, twofish.c, cast5.c, arcfour.c
	(burn_stack): New.  Add wrappers for most functions to be able to
	call burn_stack after the function invocation. This methods seems