@@ -1,5 +1,13 @@
 2001-11-24  Werner Koch  <wk@gnupg.org>
 
+	* pubkey.c: Added the rsaEncryption OID to the tables.
+	(sexp_to_key): Add an arg to return the index of the algorithm,
+	changed all callers.
+	(gcry_pk_sign): Find the signature algorithm by name and not by
+	number.
+	(gcry_pk_get_nbits): Fixed so that we can now really pass a secret
+	key to get the result.
+	
 	* md.c (gcry_md_map_name): Look also for OIDs prefixed with "oid."
 	or "OID." so that an OID string can be used as an S-Exp token.
 
